Bug 46428 - moxie-elf --enable-werror-always build fails
Summary: moxie-elf --enable-werror-always build fails
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks: enable-werror-always
  Show dependency treegraph
 
Reported: 2010-11-11 12:12 UTC by Jorn Wolfgang Rennecke
Modified: 2010-11-12 17:46 UTC (History)
0 users

See Also:
Host:
Target: moxie-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2010-11-11 12:12:11 UTC
In file included from insn-emit.c:24:0:
../../../gcc/gcc/config/moxie/constraints.md: In function ‘satisfies_constraint_W’:
../../../gcc/gcc/config/moxie/constraints.md:41:7: error: comparison of unsigned expression >= 0 is always true [-Werror=type-limits]
Comment 1 Jorn Wolfgang Rennecke 2010-11-12 17:43:26 UTC
Author: amylaar
Date: Fri Nov 12 17:43:21 2010
New Revision: 166664

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=166664
Log:
	PR target/46428
	* config/moxie/moxie.c (moxie_expand_prologue): Remove unused variables.
	* config/moxie/moxie.h (HARD_REGNO_OK_FOR_BASE_P): Use unsigned
	comparison.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/moxie/moxie.c
    trunk/gcc/config/moxie/moxie.h
Comment 2 Jorn Wolfgang Rennecke 2010-11-12 17:46:49 UTC
Patch has been applied to trunk.