re PR target/46428 (moxie-elf --enable-werror-always build fails)

PR target/46428
	* config/moxie/moxie.c (moxie_expand_prologue): Remove unused variables.
	* config/moxie/moxie.h (HARD_REGNO_OK_FOR_BASE_P): Use unsigned
	comparison.

Co-Authored-By: Richard Henderson <rth@redhat.com>

From-SVN: r166664