gcc/config/moxie/moxie.c
@@ -317,7 +317,7 @@ void
 moxie_expand_epilogue (void)
 {
   int regno;
-  rtx insn, reg, cfa_restores = NULL;
+  rtx reg;
 
   if (cfun->machine->callee_saved_reg_size != 0)
     {
@@ -340,7 +340,7 @@ moxie_expand_epilogue (void)
 	    && df_regs_ever_live_p (regno))
 	  {
 	    rtx preg = gen_rtx_REG (Pmode, regno);
-	    insn = emit_insn (gen_movsi_pop (reg, preg));
+	    emit_insn (gen_movsi_pop (reg, preg));
 	  }
     }
 
